# monorepo

./: VULNERABILITY_INVENTORY.md
.github/: dependabot.yml  folder-readme.md
.github/workflows/: SAST-TESTING-GUIDE.md  ci.yml  monorepo-builds.yml  pr-target.yml  release.yml  sast-sca-testing.yml
.scannerconfigs/: .gitleaks.toml  .hadolint.yaml  .semgrepignore  .snyk  .trivyignore  README.md  bandit.yaml  checkov.yaml  codeql-config.yml  sonar-project.properties  tfsec.yaml
build-systems/: README.md
build-systems/bazel-workspace/: BUILD  WORKSPACE
build-systems/gradle-multi/: build.gradle  settings.gradle
build-systems/maven-reactor/: pom.xml
build-systems/mixed-legacy/: Makefile  build.xml
docs/: api-guide.md  architecture.md  deployment-runbook.md
infrastructure/: README.md
infrastructure/cloudformation/: main.yaml
infrastructure/kubernetes/: README.md
orphaned/failed-migration/: pom.xml
orphaned/old-api-v1/: package.json  server.js
orphaned/prototype-auth/: auth.py  requirements.txt
orphaned/vendor-poc/: poc.rb
services/api-gateway/: .env  package.json  tsconfig.json
services/auth-service/: README.md  pom.xml
services/billing-service/: .env  requirements.txt
services/data-pipeline/: README.md  requirements.txt
services/legacy-monolith/: README.md  config.php
services/ml-inference/: README.md  requirements.txt
services/mobile-bff/: README.md  package.json
services/realtime-service/rust-ffi/: Cargo.toml
test-fixtures/: README.md  shared_test_utils.py
tools/: README.md
vulnmonolith/: .gitignore  README.md
(+612 files in other folders)
