[package]
name = "realtime-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "realtime_ffi"
crate-type = ["cdylib"]

[dependencies]
# VULNERABLE: smallvec with buffer overflow CVE-2019-15551
smallvec = "0.6.0"

# VULNERABLE: crossbeam with CVE-2020-35863
crossbeam = "0.7.0"

# VULNERABLE: regex with ReDoS
regex = "1.3.0"

# Standard dependencies
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
# VULNERABILITY: Debug info in release builds
debug = true
